# django-stubs-current-site-manager-mre

./: db.sqlite3  pyproject.toml
myproject/: settings.py
myproject/myapp/: models.py
myproject/myapp/migrations/: 0001_initial.py
