[tool.poetry]
name = "mre"
version = "0.1.0"
description = "MRE of django-stubs bug"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.10.2"
Django = "^4.0.5"

[tool.poetry.dev-dependencies]
django-stubs = "1.11.0"
mypy = "0.950"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "myproject.settings"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
